--- a/snowpack.config.json
+++ b/snowpack.config.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "mount:public": "mount public --to /",
-    "mount:src": "mount src --to /_dist_"
+    "mount:src": "mount src --to /dist"
   },
   "plugins": []
 }
